fix: spacing

--- a/src/components/PurchaseAccordion/scss/TraitBox.module.scss
+++ b/src/components/PurchaseAccordion/scss/TraitBox.module.scss
@@ -13,7 +13,7 @@
     color: #666;
   }
   div {
-    margin-top: 6px;
+    margin: 2px 0 6px 0;
     font-weight: bold;
   }
 }
